package main.exceptions;

public class NotFound extends Exception {

    public NotFound(String errorMessage) {
        super(errorMessage);
    }

}
